feat: :card_file_box: add mac_address column in database
