# docs/swagger.json
@@ -122,6 +122,12 @@
                         "name": "image",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "MAC address",
+                        "name": "mac_address",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -163,7 +169,8 @@
             "type": "object",
             "required": [
                 "latitude",
-                "longitude"
+                "longitude",
+                "mac_address"
             ],
             "properties": {
                 "latitude": {
@@ -171,17 +178,24 @@
                 },
                 "longitude": {
                     "type": "number"
+                },
+                "mac_address": {
+                    "type": "string"
                 }
             }
         },
         "github_com_wellmtx_challenge_internal_dtos.GyroscopeDataDto": {
             "type": "object",
             "required": [
+                "mac_address",
                 "x",
                 "y",
                 "z"
             ],
             "properties": {
+                "mac_address": {
+                    "type": "string"
+                },
                 "x": {
                     "type": "number"
                 },
@@ -206,6 +220,9 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "mac_address": {
                     "type": "string"
                 },
                 "matched": {
@@ -234,6 +251,9 @@
                 "longitude": {
                     "type": "number"
                 },
+                "mac_address": {
+                    "type": "string"
+                },
                 "updated_at": {
                     "type": "string"
                 }
@@ -249,6 +269,9 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "mac_address": {
                     "type": "string"
                 },
                 "updated_at": {
