# internal/dtos/base_dto.go
@@ -1,0 +1,5 @@
+package dtos
+
+type BaseDTO struct {
+	MacAddress string `json:"mac_address" binding:"required"`
+}
